--- a/src/main/resources/templates/site/faq.html
+++ b/src/main/resources/templates/site/faq.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>The Wallet Project - Site terms</title>
+    <title>The Wallet Project - Site FAQ</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
