--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -6,7 +6,8 @@ body {
   line-height: 1.7;
   color: rgb(128, 128, 128);
   font-weight: 400;
-  font-size: 1rem; }
+  font-size: 1rem;
+}
 
 ::-moz-selection {
   background: #000;
